# cursor-demo

./: README.md  main.py  pyproject.toml
.cursor/rules/: api-rules.mdc  demo-rules.mdc  test-rules.mdc
demo-example/: README.md  requirements.txt  streamlit_app.py  test_weather_database.py  test_weather_fetcher.py  todo-list.md  weather_data.db  weather_data_model.md  weather_database.py  weather_fetcher.py  weather_pipeline.py
working-example/: README.md  config.py  prompts.md  requirements.txt  streamlit_app.py  test_weather_api.py  test_weather_database.py  todo-list.md  weather_api.py  weather_data.db  weather_data_model.md  weather_database.py
