[project]
name = "cursor-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.45.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "sqlite3",
    "plotly>=5.15.0",
]
